--- a/war/styles.css
+++ b/war/styles.css
@@ -143,3 +143,25 @@ hr {
     /* Блокам, которые не должны ломаться, задаём column-span */
     figure,blockquote,pre,h1,h2,h3{column-span:all;}
 }
+
+
+/* Остальные стили */
+
+.popup {
+   max-width: 350px;
+   height: 300px;
+   background: #fff;
+   position: fixed;
+   left: 30%;
+   bottom: 50px;
+   backdrop-filter: blur(6px);
+   box-shadow: 0 0 20px rgba(0,0,0,0.3);
+   border: 1px solid #b7ad96;
+   border-radius: 8px;
+   background: rgba(38, 35, 21, 0.5);
+   padding: 12px;
+   color: #fff;
+   outline: 1px solid #594826;
+   font-size: 0.8em;
+   text-shadow: 1px 1px 0px black;
+}
